--- a/package.json
+++ b/package.json
@@ -8,6 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/cors": "^2.8.8",
+    "@types/cron": "^1.7.2",
+    "@types/express": "^4.17.8",
+    "@types/pg": "^7.14.5",
+    "@vuejs-community/vue-filter-date-format": "^1.6.2",
+    "cors": "^2.8.5",
+    "cron": "^1.8.2",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "pg": "^8.4.1",
+    "reflect-metadata": "^0.1.13",
+    "rss-parser": "^3.9.0",
+    "typeorm": "^0.2.28",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
