--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "serve:backend": "ts-node ./src/backend/app.ts",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -13,9 +14,12 @@
     "cron": "^1.8.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "node-fetch": "^2.6.1",
     "pg": "^8.4.1",
     "reflect-metadata": "^0.1.13",
     "rss-parser": "^3.9.0",
+    "ts-node": "^9.0.0",
     "typeorm": "^0.2.28",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
@@ -27,6 +31,7 @@
     "@types/cors": "^2.8.8",
     "@types/cron": "^1.7.2",
     "@types/express": "^4.17.8",
+    "@types/node-fetch": "^2.5.7",
     "@types/pg": "^7.14.5",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
